# smart-garage-door-opener

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  sdkconfig  smartGarageOpener.ino
docs/: BUILD.md  FLASH.md  GARAGE_DOOR_OPENER_SPECS.md  PLAN_OF_ACTION.md  RESEARCH.md  SPECS.md
main/: CMakeLists.txt  garage_state_machine.c  mqtt_hal.c  mqtt_impl.c  mqtt_retry_manager.c  smart_garage_door.c  wifi_impl.c  wifi_retry_manager.c
main/include/: garage_state_machine.h
main/include/mqtt/: mqtt_interface.h  mqtt_retry_manager.h
main/include/wifi/: wifi_hal_interface.h  wifi_retry_manager.h
main/interfaces/: mqtt_hal_interface.h  mqtt_interface.h  wifi_interface.h
main/mqtt/: mqtt_hal.c  mqtt_impl.c  mqtt_retry_manager.c
main/wifi/: wifi_hal.c  wifi_retry_manager.c
samples/mqtt-integration/: mqtt_client.py
test/: CMakeLists.txt  CMakePresets.json  README.md  test_mqtt_retry.c  test_mqtt_retry.cpp  test_state_machine.c  test_state_machine.cpp  test_wifi_retry.c  test_wifi_retry.cpp
test-integration/: README.md
